--- a/ckanext/cphmetadata/templates/home/snippets/search.html
+++ b/ckanext/cphmetadata/templates/home/snippets/search.html
@@ -3,7 +3,7 @@
 
 <div class="module module-search module-narrow module-shallow box">
   <form class="module-content search-form" method="get" action="{% url_for controller='package', action='search' %}">
-    <h3 class="heading">{{ _("Search metadata") }}</h3>
+    <h3 class="heading">{{ _("Søg i Datakataloget") }}</h3>
     <div class="search-input control-group search-giant">
       <input type="text" class="search" name="q" value="" autocomplete="off" placeholder="{% block search_placeholder %}{{ placeholder }}{% endblock %}" />
       <button type="submit">
@@ -13,7 +13,7 @@
     </div>
   </form>
   <div class="tags">
-    <h3>{{ _('Popular tags') }}</h3>
+    <h3>{{ _('Populære tags') }}</h3>
     {% for tag in tags %}
       <a class="tag" href="{% url_for controller='package', action='search', tags=tag.name %}">{{ h.truncate(tag.display_name, 22) }}</a>
     {% endfor %}
