--- a/ckanext/cphmetadata/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/cphmetadata/templates/package/snippets/package_metadata_fields.html
@@ -1,30 +1,32 @@
 {% import 'macros/form.html' as form %}
 
 {% block package_metadata_fields %}
+  
+  {% block package_metadata_author %}
+    {{ form.input('author', label=_('Forfatter'), id='field-author', placeholder=_('Joe Bloggs'), value=data.author, error=errors.author, classes=['control-medium']) }}
+    {{ form.input('author_email', label=_('Forfatters e-mail'), id='field-author-email', placeholder=_('joe@example.com'), value=data.author_email, error=errors.author_email, classes=['control-medium']) }}
+  {% endblock %}
 
   {% block package_metadata_fields_maintainer %}
     {# Renamed label to contact person #}
-    {{ form.input('maintainer', label=_('Contact person'), id='field-maintainer', placeholder=_('Joe Bloggs'), value=data.maintainer, error=errors.maintainer, classes=['control-medium']) }}
-    {{ form.input('maintainer_email', label=_('Contact e-mail'), id='field-maintainer-email', placeholder=_('joe@example.com'), value=data.maintainer_email, error=errors.maintainer_email, classes=['control-medium']) }}
+    {{ form.input('maintainer', label=_('Vedligeholdes af'), id='field-maintainer', placeholder=_('Joe Bloggs'), value=data.maintainer, error=errors.maintainer, classes=['control-medium']) }}
+    {{ form.input('maintainer_email', label=_('Vedligeholders e-mail'), id='field-maintainer-email', placeholder=_('joe@example.com'), value=data.maintainer_email, error=errors.maintainer_email, classes=['control-medium']) }}
   {% endblock %}
 
+  {# The editor is not used
   {% block package_metadata_editor %}
     {{ form.input('editor', label=_('Editing'), id='field-editor', value=data.editor, error=errors.editor, classes=['control-medium']) }}
-  {% endblock %}
-
-  {% block package_metadata_author %}
-    {{ form.input('author', label=_('Data owner'), id='field-author', placeholder=_('Joe Bloggs'), value=data.author, error=errors.author, classes=['control-medium']) }}
-  {% endblock %}
-
+  {% endblock %}  #}
+  
   {% block display_source %}
-    {{ form.checkbox('kkkort', label=_('Internally at KKkort'), value='True', checked=data.kkkort=='True') }}
-    {{ form.checkbox('copenhagenkortet', label=_('Externally at Københavnerkortet'), value='True', checked=data.copenhagenkortet=='True') }}
-    {{ form.checkbox('datakk', label=_('Externally at data.kk.dk'), value='True', checked=data.datakk=='True') }}
+    {{ form.checkbox('kkkort', label=_('Internt på KKkort'), value='True', checked=data.kkkort=='True') }}
+    {{ form.checkbox('copenhagenkortet', label=_('Eksternt på Københavnerkortet'), value='True', checked=data.copenhagenkortet=='True') }}
+    {{ form.checkbox('datakk', label=_('Eksternt på data.kk.dk'), value='True', checked=data.datakk=='True') }}
   {% endblock %}
 
   {% block data_quality %}
   <div class="control-group">
-    <label for="field-data-quality" class="control-label">{{ _('Data quality') }}</label>
+    <label for="field-data-quality" class="control-label">{{ _('Datakvalitet') }}</label>
     <div class="controls">
       <select id="field-data-quality" name="data_quality">
         {% for option in [('good', _('Total ajourført')), ('medium', _('Delvist ajourført')), ('bad', _('Mangelfuldt'))] %}
@@ -33,15 +35,15 @@
       </select>
     </div>
   </div>
-  {{ form.input('quality_note', label=_('Data quality note'), id='field-quality-note', value=data.quality_note, error=errors.quality_note, classes=['control-medium']) }}
+  {{ form.input('quality_note', label=_('Datakvalitet note'), id='field-quality-note', value=data.quality_note, error=errors.quality_note, classes=['control-medium']) }}
   {% endblock %}
 
   {% block date_created %}
-    {{ form.input('date_created', label=_('Created'), id='field-date-created', value=data.date_created, error=errors.date_created, type='date', classes=['control-medium']) }}
+    {{ form.input('date_created', label=_('Oprettet'), id='field-date-created', value=data.date_created, error=errors.date_created, type='date', classes=['control-medium']) }}
   {% endblock %}
 
   {% block date_updated %}
-    {{ form.input('date_updated', label=_('Updated'), id='field-date-updated', value=data.date_updated, error=errors.date_updated, type='date', classes=['control-medium']) }}
+    {{ form.input('date_updated', label=_('Sidst opdateret'), id='field-date-updated', value=data.date_updated, error=errors.date_updated, type='date', classes=['control-medium']) }}
   {% endblock %}
 
   {% block package_metadata_fields_custom %}
